# openbrain

./: .gitignore  ARCHITECTURE.md  README.md  gatitos.md  hh.md  pip_install_log.txt  pip_log.txt  pip_upgrade.txt  pyproject.toml
data/workspace/Chats/: Ideas_para_Proyecto_React.md
gatitos/: fd.md  gatitos_index.md
gato/: gatito.md  gato_index.md
openbrain/: api.py  audio.py  cli.py  core.py  templates.py
